<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="ime_name">SKK for Android</string>
	<string name="label_mushroom">マッシュルーム</string>
	<string name="label_speech_recognition_results">認識結果</string>
	<string name="label_extdic_activity">辞書ファイル解凍</string>
	<string name="label_pref_activity">SKK for Androidの設定</string>
	<string name="label_pref_softkeyboard">ソフトウェアキーボードの設定...</string>
	<string name="label_pref_hardkeyboard">ハードウェアキーボードの設定...</string>
	<string name="label_dictool_activity">SKK ユーザー辞書ツール</string>
	<string name="label_import">インポート</string>
	<string name="label_export">エクスポート</string>
	<string name="label_clear_userdic">ユーザー辞書初期化</string>
	<string name="label_backup_dic">SDカードに出力</string>
	<string name="label_no_entry_found">エントリがありません</string>
	<string name="label_dicmanager_activity">SKK 辞書管理</string>
	<string name="label_dicmanager_ldic">SKK L辞書</string>
	<string name="label_dicmanager_optionaldic">SKK 追加辞書</string>
	<string name="label_dicmanager_add">辞書を追加</string>
	<string name="label_dicmanager_input_name">辞書の名前を入力</string>

	<string name="label_filechooser_save_as">名前をつけて保存</string>
	<string name="label_filechooser_open">ファイルを開く</string>
	<string name="label_filechooser_opendir">ディレクトリを開く</string>
    <string name="label_filechooser_parent_dir">&#9166; 親ディレクトリ</string>
	<string name="error_access_failed">アクセスできません: %1$s</string>
    <string name="error_open_external_storage">外部ストレージが開けません</string>

	<string name="message_extract">辞書ファイルを解凍中...</string>
	<string name="message_cancelled">中断しました</string>
	<string name="message_finished">解凍終了</string>
	<string name="message_confirm_remove">このエントリを削除しますか？</string>
	<string name="message_confirm_clear">現在のユーザー辞書の内容はすべて消去されます．よろしいですか？</string>
	<string name="message_written_to_external_storage">ユーザー辞書をテキスト形式で保存しました: %1$s</string>
	<string name="message_confirm_remove_dic">この辞書を削除しますか？</string>

	<string name="error_dic">辞書ファイルを開けません．設定画面から，「辞書ファイル解凍」を実行してください</string>
	<string name="error_user_dic">ユーザー辞書が開けません</string>
	<string name="error_open_user_dic">ユーザー辞書を開くときにエラーが発生しました．テキスト形式保存を試みた後，初期化してもよろしいですか？</string>
	<string name="error_file_not_found">ファイルがありません: %1$s</string>
	<string name="error_file_load">ファイル読みこみに失敗しました: %1$s</string>
	<string name="error_no_mushroom">マッシュルームアプリがひとつもインストールされていません</string>
	<string name="error_write_to_external_storage">テキスト形式の保存に失敗しました</string>
	<string name="error_text_dic_coding">UTF-8のファイルではないようです</string>

	<string name="label_YES">はい</string>
	<string name="label_NO">いいえ</string>

	<string translatable="false" name="prefkey_kutouten_type">PrefKeyKutoutenType</string>
	<string translatable="false" name="prefkey_kana_key">PrefKeyKanaKey</string>
	<string translatable="false" name="prefkey_mod_kana_key">PrefKeyModKanaKey</string>
	<string translatable="false" name="prefkey_toggle_kana_key">PrefKeyToggleKanaKey</string>
	<string translatable="false" name="prefkey_cancel_key">PrefKeyCancelKey</string>
	<string translatable="false" name="prefkey_mod_cancel_key">PrefKeyModCancelKey</string>
	<string translatable="false" name="prefkey_candidates_size">PrefKeyCandidatesSize</string>
	<string translatable="false" name="prefkey_use_candidates_view">PrefKeyUseCandidatesView</string>
	<string translatable="false" name="prefkey_flick_sensitivity">PrefKeyFlickSensitivity</string>
	<string translatable="false" name="prefkey_flick_sensitivity2">PrefKeyFlickSensitivity2</string>
	<string translatable="false" name="prefkey_curve_sensitivity">PrefKeyCurveSensitivitye</string>
	<string translatable="false" name="prefkey_use_softkey">PrefKeyUseSoftKey</string>
	<string translatable="false" name="prefkey_use_popup">PrefKeyUsePopup</string>
	<string translatable="false" name="prefkey_fixed_popup">PrefKeyFixedPopup</string>
	<string translatable="false" name="prefkey_use_soft_cancel_key">PrefKeyUseSoftCancelKey</string>
	<string translatable="false" name="prefkey_key_height">PrefKeyKeyHeight</string>
	<string translatable="false" name="prefkey_key_height_port">PrefKeyKeyHeightPort</string>
	<string translatable="false" name="prefkey_key_height_land">PrefKeyKeyHeightLand</string>
	<string translatable="false" name="prefkey_key_width_port">PrefKeyKeyWidthPort</string>
	<string translatable="false" name="prefkey_key_width_land">PrefKeyKeyWidthLand</string>
	<string translatable="false" name="prefkey_key_position">PrefKeyKeyPosition</string>
	<string translatable="false" name="prefkey_sticky_meta">PrefKeyStickyMeta</string>
	<string translatable="false" name="prefkey_sands">PrefKeySandS</string>
	<string translatable="false" name="prefkey_optional_dics">PrefKeyOptionalDics</string>

	<string translatable="false" name="btree_name">skk_dict</string>
	<string translatable="false" name="dic_name_main">skk_dict_btree</string>
	<string translatable="false" name="dic_name_user">skk_userdict</string>
</resources>
