<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:seekbar="http://schemas.android.com/apk/res-auto"
	android:title="@string/label_pref_activity">
	<ListPreference
		android:key="@string/prefkey_kutouten_type"
		android:title="句読点のタイプ"
		android:summary="かなモードで入力される句読点"
		android:entries="@array/kutouten_entries"
		android:entryValues="@array/kutouten_values"
		android:dialogTitle="句読点のタイプ"
		android:defaultValue="en" />
	<com.hlidskialf.android.preference.SeekBarPreference
		android:key="@string/prefkey_candidates_size"
		android:title="候補表示の文字サイズ"
		android:dialogTitle="候補表示の文字サイズ"
		android:defaultValue="18"
		android:text=" sp"
		seekbar:min="12"
		android:max="48" />
	<Preference
		android:title="@string/label_dicmanager_activity" >
		<intent android:action="android.intent.action.MAIN"
				android:targetPackage="link.nombi.androidskklang"
				android:targetClass="link.nombi.androidskklang.SKKDicManager" />
	</Preference>
	<Preference
		android:title="@string/label_dictool_activity" >
		<intent android:action="android.intent.action.MAIN"
			android:targetPackage="link.nombi.androidskklang"
			android:targetClass="link.nombi.androidskklang.SKKUserDicTool" />
	</Preference>
	<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
		android:title="@string/label_pref_hardkeyboard">
		<link.nombi.androidskklang.SetKeyPreference
			android:key="@string/prefkey_kana_key"
			android:title="かなキー"
			android:summary="かなモードに移行するキー"
			android:dialogTitle="Press a key ..."
			android:negativeButtonText="キャンセル"
			android:positiveButtonText="OK" />
		<CheckBoxPreference
			android:key="@string/prefkey_toggle_kana_key"
			android:title="かなキーをトグルに"
			android:summary="オンだと，かなモードでかなキーを押すとASCIIモードに戻ります"
			android:defaultValue="true" />
		<link.nombi.androidskklang.SetKeyPreference
			android:key="@string/prefkey_cancel_key"
			android:title="キャンセルキー"
			android:dialogTitle="Press a key ..."
			android:negativeButtonText="キャンセル"
			android:positiveButtonText="OK" />
		<CheckBoxPreference
			android:key="@string/prefkey_use_candidates_view"
			android:title="補完・候補の一覧表示"
			android:summary="補完候補や変換候補を一覧表示します"
			android:defaultValue="true" />
		<CheckBoxPreference
			android:key="@string/prefkey_sticky_meta"
			android:title="Sticky shift"
			android:summary="shiftを同時押しでなくても効くようにします"
			android:defaultValue="false" />
		<CheckBoxPreference
			android:key="@string/prefkey_sands"
			android:title="SandS"
			android:summary="スペースキーをshiftとして使います"
			android:defaultValue="false" />
	</PreferenceScreen>
	<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
		android:title="@string/label_pref_softkeyboard">
		<ListPreference
			android:key="@string/prefkey_use_softkey"
			android:title="ソフトウェアキーボードの使用"
			android:entries="@array/usesoftkey_entries"
			android:entryValues="@array/usesoftkey_values"
			android:defaultValue="auto" />
		<ListPreference
			android:key="@string/prefkey_flick_sensitivity2"
			android:title="フリック感度"
			android:summary="「高」にすると反応しやすくなります"
			android:entries="@array/sensitivity_entries"
			android:entryValues="@array/sensitivity_values"
			android:dialogTitle="フリック感度"
			android:defaultValue="mid" />
		<CheckBoxPreference
			android:key="@string/prefkey_use_popup"
			android:title="ポップアップの使用"
			android:summary="フリック入力用のガイドを表示します"
			android:disableDependentsState="false"
			android:defaultValue="true" />
		<CheckBoxPreference
			android:key="@string/prefkey_fixed_popup"
			android:title="ポップアップの固定"
			android:summary="フリック入力ガイドを，常に上部の同じ場所に表示します"
			android:dependency="PrefKeyUsePopup"
			android:defaultValue="true" />
		<CheckBoxPreference
			android:key="@string/prefkey_use_soft_cancel_key"
			android:title="キャンセルキーの使用"
			android:summary="小文字キーのかわりにキャンセルキーを使います"
			android:defaultValue="false" />
		<com.hlidskialf.android.preference.SeekBarPreference
			android:key="@string/prefkey_key_height_port"
			android:title="キーボードの高さ（縦画面）"
			android:dialogMessage="縦画面での高さを指定してください（画面の高さに対する割合）"
			android:defaultValue="30"
			android:text=" %"
			seekbar:min="20"
			android:max="50" />
		<com.hlidskialf.android.preference.SeekBarPreference
			android:key="@string/prefkey_key_height_land"
			android:title="キーボードの高さ（横画面）"
			android:dialogMessage="横画面での高さを指定してください（画面の高さに対する割合）"
			android:defaultValue="30"
			android:text=" %"
			seekbar:min="20"
			android:max="50" />
		<com.hlidskialf.android.preference.SeekBarPreference
			android:key="@string/prefkey_key_width_port"
			android:title="日本語キーボードの幅（縦画面）"
			android:dialogMessage="縦画面での幅を指定してください（画面の幅に対する割合）"
			android:defaultValue="100"
			android:text=" %"
			seekbar:min="40"
			android:max="100"
			seekbar:step="5" />
		<com.hlidskialf.android.preference.SeekBarPreference
			android:key="@string/prefkey_key_width_land"
			android:title="日本語キーボードの幅（横画面）"
			android:dialogMessage="横画面での幅を指定してください（画面の幅に対する割合）"
			android:defaultValue="100"
			android:text=" %"
			seekbar:min="40"
			android:max="100"
			seekbar:step="5" />
		<ListPreference
			android:key="@string/prefkey_key_position"
			android:title="日本語キーボードの位置"
			android:entries="@array/position_entries"
			android:entryValues="@array/position_values"
			android:dialogTitle="日本語キーボードの位置"
			android:defaultValue="center" />
	</PreferenceScreen>
	<Preference
		android:title="辞書ファイル解凍"
		android:summary="最初に一回実行してください" >
		<intent android:action="android.intent.action.MAIN"
			android:targetPackage="link.nombi.androidskklang"
			android:targetClass="link.nombi.androidskklang.SKKDicExtractActivity" />
	</Preference>
</PreferenceScreen>
